--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- iconify icons -->
+        <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -188,7 +190,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Development Tools</div>
+                    <!-- <div class="subheading mb-3">Programming Languages & Development Tools</div> -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                              <h4>Android Development</h4>
@@ -209,7 +211,7 @@
                                 </div>
                             </div>
                             <br>
-                             <h4>JAVA</h4>
+                            <!--  <h4>JAVA</h4>
                             <div class="progress md-progress" style="height: 20px">
                                 <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">80% (success)
                                 </div>
@@ -226,20 +228,20 @@
                                 <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">60% (success)
                                 </div>
                             </div>
-                            <br>
+                            <br> -->
                             <div class="subheading mb-3">Other Programming Languages</div>
                             <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-android"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-github"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-github"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-kotlin"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-ibm"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:html-5"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:css-3"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon style="color: green;" data-icon="cib:js"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:bootstrap"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:php"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:java"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:kotlin"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:python"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="logos:firebase"></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon style="color: blue" data-icon="cib:mysql" ></iconify-icon></li>
+                        <li class="list-inline-item"><iconify-icon data-icon="flat-color-icons:android-os"></iconify-icon></li>
                     </ul>
                              
                             
