--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certification</a></li>
                 </ul>
             </div>
         </nav>
@@ -256,8 +256,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a developer, I enjoy most of my time being outdoors.I enjoy walking around trees, free climbing.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows,I spend a large amount of my free time exploring the latest technology going on in development world.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -267,44 +267,67 @@
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
+                        <div class="row">
+
+                            <div class="col-sm-4">
+                            <div class="card" style="width: 18rem;background-color: #585c68;">
+                              <div class="card-header" style="background-color: #fff;color: #dc3545;"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:Jun 2020</span>
+                              </div>
+                              <div class="card-body" style="background-color: #fff;">
+                                <h5 class="card-title">Become Android Developer From Scratch</h5>
+                                <p class="card-text">Credential Id:UC-816f90cd-ed27-44a2-83d9-264c95a23502</p>
+                                <a href="https://ude.my/UC-816f90cd-ed27-44a2-83d9-264c95a23502" class="btn  btn-primary">See Credential</a>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-sm-4">
+                            <div class="card" style="width: 18rem;background-color: #585c68;">
+                              <div class="card-header" style="background-color: #fff;color: #003957;"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:Jun 2020</span>
+                              </div>
+                              <div class="card-body" style="background-color: #fff;">
+                                <h5 class="card-title">The Complete Android App Development Masterclass: Build Apps</h5>
+                                <p class="card-text">Credential Id:UC-5e8dd68a-959f-4f67-8284-d80617bcc342</p>
+                                <a href="https://www.udemy.com/certificate/UC-5e8dd68a-959f-4f67-8284-d80617bcc342/" class="btn  btn-danger">See Credential</a>
+                              </div>
+                           </div>
+                          </div>
+
+                        <div class="col-sm-4">
+                               <div class="card" style="width: 18rem;background-color: #003957;">
+                                  <div class="card-header" style="background-color: #fff;color: #dc3545;"><b>Udemy</b>
+                                    <br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:May 2020</span>
+                                  </div>
+                                  <div class="card-body" style="background-color: #fff;">
+                                    <h5 class="card-title">Build Undectable Malware Using C Language :Ethical Hacking Online Course</h5>
+                                    <p class="card-text">Credential Id:UC-4b19f8f7-284e-4801-9c15-9cb1c37a072</p>
+                                    <a href="https://www.udemy.com/certificate/UC-4b19f8f7-284e-480f-9c15-9cb1c37a07a2/" class="btn  btn-primary">See Credential</a>
+                                  </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </li>
+                    <br>
+                    <br>
+                    <li>
+                        <div class="row">
+                            <!-- cards start -->
+                            <div class="col-sm-4">
+                            <div class="card" style="width: 18rem;background-color: #585c68;">
+                              <div class="card-header" style="background-color: #fff;color: #003957;"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:April 2020</span>
+                              </div>
+                              <div class="card-body" style="background-color: #fff;">
+                                <h5 class="card-title">Learn Computer Vision with OpenCv Library Using Python</h5>
+                                <p class="card-text">Credential Id: UC-db9cc05e-0b9a-4684-bf53-b447ca7a13bc</p>
+                                <a href="https://www.udemy.com/certificate/UC-db9cc05e-0b9a-4684-bf53-b447ca7a13bc/" class="btn  btn-danger">See Credential</a>
+                              </div>
+                           </div>
+                          </div>
+                          <!-- cards end -->
+                        </div>
+                    </li>
+                 </ul>
                 </div>
             </section>
         </div>
