projects added and existing updated

--- a/Projects/ChatMessenger/video.html
+++ b/Projects/ChatMessenger/video.html
@@ -1,3 +1,3 @@
-<video class="video-box" width="320" height="500" controls="controls">
+<video width="315" height="490" controls="controls">
   <source src="assets/video/chat.mp4" type="video/mp4">
 </video>
