--- a/Projects/ChatMessenger/projectIndex.html
+++ b/Projects/ChatMessenger/projectIndex.html
@@ -16,7 +16,7 @@
         <!-- iconify icons -->
         <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../../css/styles.css" rel="stylesheet" />
+        <link href="./css/styles.css" rel="stylesheet" />
         <link href="css/smartphone.css" rel="stylesheet" />
         <link href="css/gallery.css" rel="stylesheet"/>
         <link href="../gallery/css/lightbox.min.css" rel="stylesheet"/>
@@ -149,6 +149,6 @@
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="./js/scripts.js"></script>
     </body>
 </html>
