--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Balkrishna Shah</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+                
+                <span class="d-none d-lg-block">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/me.png" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -52,7 +54,7 @@
                         <a href="mailto:shahkrishna493@gmail.com">shahkrishna493@gmail.com</a>
                     </div>
                     <div class="subheading mb-5">
-                        <a href="https://balkrishnashahportfolio.ml/">Balkrishna Shah Portfolio</a>
+                        <a href="BalkrishnaShah.pdf">open resume</a>
                     </div>
                     <p class="lead mb-5">Experienced Android Developer with a demonstrated history of working in the computer and network security industry. Skilled in Python (Programming Language), PHP,Android Development, and web development tools. Strong engineering professional with a Bachelor of Engineering - BE focused in Information Technology from Vidyavardhini's College of Engineering and Technology</p>
                     <div class="social-icons">
