--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <!-- Firebase authetication with email sign In/Out.Able to send and receive messages on realtime <br/>Profile for user to view his/her details
                             	<br/>Technology : Android,Firebase,Kotlin<br/><br/> -->
 
-                            	<a href="Projects/ChatMessenger/index.html"><button  class="btn-primary">View Project</button></a>
+                            	<a href="Projects/ChatMessenger/index"><button  class="btn-primary">View Project</button></a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar 2020 - Mar 2020</span></div>
@@ -113,7 +113,7 @@
                                <!--  Firebase authetication with email sign In/Out <br/>Able to send and receive messages on realtime <br/>Profile for user to his/her details
                             	<br/>Technology : Android,Firebase,Kotlin<br/><br/> -->
 
-                            	<a href="Projects/ComicReader/index.html"><button class="btn-primary">View Project</button></a></p>
+                            	<a href="Projects/ComicReader/index"><button class="btn-primary">View Project</button></a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar 2020 - Mar 2020</span></div>
                     </div>
@@ -124,7 +124,7 @@
                             <div class="subheading mb-3">Android Application</div>
                             <p>
                                <!--  Application stores marks of student roll no wise and we can perform CURD(Create, Update,Read, Delete) operations on records.<br/>Technology : Android,Java,Sqllite<br/><br/> -->
-                            	<a href="Projects/StudentMangement/index.html"><button class="btn-primary">View Project</button></a></p>
+                            	<a href="Projects/StudentMangement/index"><button class="btn-primary">View Project</button></a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2018 - Oct 2018</span></div>
                     </div>
