modifed cards of awards section

--- a/index.html
+++ b/index.html
@@ -270,87 +270,73 @@
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                        <div class="row">
+           <section class="resume-section" id="awards">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Awards & Certifications</h2>
 
-                            <div class="col-sm-4">
-                            <div class="card" style="width: 18rem;background-color: #585c68;">
-                              <div class="card-header" style="background-color: #fff;color: #dc3545;"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:Jun 2020</span>
-                              </div>
-                              <div class="card-body" style="background-color: #fff;">
-                                <h5 class="card-title">Become Android Developer From Scratch</h5>
-                                <!-- <p class="card-text">Credential Id:UC-816f90cd-ed27-44a2-83d9-264c95a23502</p> -->
-                                <a href="https://ude.my/UC-816f90cd-ed27-44a2-83d9-264c95a23502" class="btn  btn-primary">See Credential</a>
-                              </div>
-                            </div>
-                          </div>
+                <div class="custom-award-section">
 
-                          <div class="col-sm-4">
-                            <div class="card" style="width: 18rem;background-color: #585c68;">
-                              <div class="card-header" style="background-color: #fff;color: #003957;"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:Jun 2020</span>
-                              </div>
-                              <div class="card-body" style="background-color: #fff;">
-                                <h5 class="card-title">The Complete Android App Development Masterclass: Build Apps</h5>
-                                <!-- <p class="card-text">Credential Id:UC-5e8dd68a-959f-4f67-8284-d80617bcc342</p> -->
-                                <a href="https://www.udemy.com/certificate/UC-5e8dd68a-959f-4f67-8284-d80617bcc342/" class="btn  btn-danger">See Credential</a>
-                              </div>
-                           </div>
-                          </div>
-
-                        <div class="col-sm-4">
-                               <div class="card" style="width: 18rem;background-color: #003957;">
-                                  <div class="card-header" style="background-color: #fff;color: #dc3545;"><b>Udemy</b>
-                                    <br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:May 2020</span>
-                                  </div>
-                                  <div class="card-body" style="background-color: #fff;">
-                                    <h5 class="card-title">Build Undectable Malware Using C Language :Ethical Hacking Online Course</h5>
-                                    <!-- <p class="card-text">Credential Id:UC-4b19f8f7-284e-4801-9c15-9cb1c37a072</p> -->
-                                    <a href="https://www.udemy.com/certificate/UC-4b19f8f7-284e-480f-9c15-9cb1c37a07a2/" class="btn  btn-primary">See Credential</a>
-                                  </div>
+                    <ul class="cards">
+                        <li class="cards_item">
+                            <div class="card">
+                                <div class="card_content">
+                                    <h2 class="card_title"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:Jun 2020</span></h2>
+                                    <p class="card_text">The Complete Android App Development Masterclass: Build Apps</p>
+                                    <a href="https://www.udemy.com/certificate/UC-5e8dd68a-959f-4f67-8284-d80617bcc342/" class="btn card_btn">See Credential</a>
                                 </div>
                             </div>
+                        </li>
 
-                        </div>
-                    </li>
-                    <br>
-                    <br>
-                    <li>
-                        <div class="row">
-                            <!-- cards start -->
-                            <div class="col-sm-4">
-                            <div class="card" style="width: 18rem;background-color: #585c68;">
-                              <div class="card-header" style="background-color: #fff;color: #003957;"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:April 2020</span>
-                              </div>
-                              <div class="card-body" style="background-color: #fff;">
-                                <h5 class="card-title">Learn Computer Vision with OpenCv Library Using Python</h5>
-                                <!-- <p class="card-text">Credential Id: UC-db9cc05e-0b9a-4684-bf53-b447ca7a13bc</p> -->
-                                <a href="https://www.udemy.com/certificate/UC-db9cc05e-0b9a-4684-bf53-b447ca7a13bc/" class="btn  btn-danger">See Credential</a>
-                              </div>
-                           </div>
-                          </div>
-                          <!-- cards end -->
-                          <!-- cards start -->
-                          <div class="card" style="width: 18rem;background-color: #003957;">
-                                  <div class="card-header" style="background-color: #fff;color: #dc3545;"><b>YouAccel</b>
-                                    <br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:May 2020</span>
-                                  </div>
-                                  <div class="card-body" style="background-color: #fff;">
-                                    <h5 class="card-title">Kotlin Fundamentals With Android Studio</h5>
-                                    <!-- <p class="card-text">Credential Id:1145523001</p> -->
-                                    <a href="https://youaccel.com/admin/certificate_gen/tcpdf/ya/certificate_ya.php?certid=1145523001" class="btn  btn-primary">See Credential</a>
-                                  </div>
-                        </div>
-                        <!-- cards end -->
 
-                        </div>
-                    </li>
-                 </ul>
+                        <li class="cards_item">
+                            <div class="card">
+                                <div class="card_content">
+                                    <h2 class="card_title"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:Jun 2020</span></h2>
+                                    <p class="card_text">Become Android Developer From Scratch</p>
+                                    <a href="https://ude.my/UC-816f90cd-ed27-44a2-83d9-264c95a23502" class="btn card_btn">See Credential</a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="cards_item">
+                            <div class="card">
+                                <div class="card_content">
+                                    <h2 class="card_title"><b>YouAccel</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:May 2020</span></h2>
+                                    <p class="card_text">Kotlin Fundamentals With Android Studio</p>
+                                    <a href="https://youaccel.com/admin/certificate_gen/tcpdf/ya/certificate_ya.php?certid=1145523001" class="btn card_btn">See Credential</a>
+                                </div>
+                            </div>
+                        </li>
+
+
+                        <li class="cards_item">
+                            <div class="card">
+                                <div class="card_content">
+                                    <h2 class="card_title"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:May 2020</span></h2>
+                                    <p class="card_text">Build Undectable Malware Using C Language :Ethical Hacking Course</p>
+                                    <a href="https://www.udemy.com/certificate/UC-4b19f8f7-284e-480f-9c15-9cb1c37a07a2/" class="btn card_btn">See Credential</a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="cards_item">
+                            <div class="card">
+                                <div class="card_content">
+                                    <h2 class="card_title"><b>Udemy</b><br><span style="color: black;">&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;issued:April 2020</span></h2>
+                                    <p class="card_text">Learn Computer Vision with OpenCv Library Using Python</p>
+                                    <a href="https://www.udemy.com/certificate/UC-db9cc05e-0b9a-4684-bf53-b447ca7a13bc/" class="btn card_btn">See Credential</a>
+                                </div>
+                            </div>
+                        </li>
+
+
+
+                    </ul>
                 </div>
-            </section>
+
+            </div>
+        </section>
+                
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
