--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- iconify icons -->
         <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./css/styles.css" rel="stylesheet" />
+        <link href="./css/styles1.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
