--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="d-block d-lg-none">Balkrishna Shah</span>
 
             <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/me.png" alt="" /></span>
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/me-1.0.png" alt="" /></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
